--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -140,7 +140,7 @@
 
     <!-- SignalR客户端库 -->
     <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@8.0.0/dist/browser/signalr.min.js"></script>
-    <script src="app-multiparty.js"></script>
+    <script src="app-multiparty.js?v=20251023-1645"></script>
 
 </body>
 </html>
